# media-source-adaptor

./: .gitignore  .python-version  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
media_source_adaptor/: common.py  skylinewebcams.py  webcam.py
tests/: test_common.py  test_library.py  test_skylinewebcams.py  test_webcam.py
