[tool.poetry]
name = "media-source-adaptor"
version = "0.1.0"
description = "Adaptor to gather different streams, videos or images with Python generators"
authors = ["Piero Macaluso <piero.macaluso@linksfoundation.com>, Fabio Montello <fabio.montello@linksfoundation.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5"
youtube-dl = {git = "https://github.com/PieroMacaluso/youtube-dl"}
# youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
